--- a/bonus/index.html
+++ b/bonus/index.html
@@ -18,6 +18,10 @@
       <div class="carousel-wrapper">
         <button id="right-btn" class="cs-btn"><i class="fa-solid fa-chevron-right"></i></button>
         <button id="left-btn" class="cs-btn"><i class="fa-solid fa-chevron-left"></i></button>
+        <div class="wrapper-btn">
+          <button id="autoplay-btn">FERMA AUTOPLAY</button>
+          <button id="reverse-btn"><i class="fa-solid fa-arrow-right-arrow-left"></i></button>
+        </div>
         <div id="carousel-main">
         </div>
         <div id="carousel-index">
